fix stray checkmarks, consistent opacity, and icon not showing up (#298346)

--- a/src/vs/workbench/contrib/chat/browser/widget/chatContentParts/media/chatThinkingContent.css
+++ b/src/vs/workbench/contrib/chat/browser/widget/chatContentParts/media/chatThinkingContent.css
@@ -142,7 +142,8 @@
 				}
 
 				/* todo: ideally not !important, but the competing css has 14 specificity */
-				.codicon:not(.chat-thinking-icon){
+				.codicon.codicon-check,
+				.codicon.codicon-loading {
 					display: none !important;
 				}
 
